# MLLibMark

./: LICENSE  README.md  benchmark.ipynb
garch/: cppllh.cpp  data-original.json  data.json  garch-cupy.py  garch-gluon.py  garch-minpy.py  garch-tf-v1.py  garch-tf.py  garch-theano.py  garch.R  garch.jl  garch.py  util.py
hmc/: CMakeLists.txt  Cargo.toml  hmc-cupy.py  hmc-gluon.py  hmc-jax.py  hmc-minpy.py  hmc-mxnet.py  hmc-pytensor.py  hmc-tf-v1.py  hmc-tf.py  hmc-theano.py  hmc-torch.py  hmc.R  hmc.cpp  hmc.jl  hmc.py  params.json  util.py
hmc/src/: main.rs
mc/: Cargo.toml  data.json  mc-cupy.py  mc-gluon.py  mc-jax.py  mc-minpy.py  mc-mxnet.py  mc-pytensor.py  mc-tf-v1.py  mc-tf.py  mc-theano.py  mc-torch.py  mc.R  mc.cpp  mc.jl  mc.py  util.py
mc/src/: main.rs
